# BarcodeUtils

./: README.md
Snippets/BarcodeDetector1/: CMakeLists.txt  main.cpp
Snippets/BarcodeRotationTest1/: CMakeLists.txt  main.cpp
Snippets/BarcodeScanner1/: CMakeLists.txt  main.cpp
Snippets/BarcodeScanner2/: CMakeLists.txt  main.cpp
